fcdev: the native build's child function host runs with --enable-preview
Booting the native fcdev with functions on, the child JVM died with
UnsupportedClassVersionError on Reconciler (preview-compiled): the
launcher ran plain java -jar. It now passes the same two flags as the
host image's entrypoint. Test pins the exact argv.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>